# janplay

./: Cargo.toml
src/: main.rs
src/func/: fetch_audio_url.rs  mod.rs  play_stream.rs  print_welcome_message.rs  transcode_audio.rs
