[package]
name = "janplay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "1.*", features = ["full"] }
youtube_dl = "0.6.1"
serde = "*"
serde_json = "*"
serde_derive = "*"
reqwest = { version = "0.11", features = ["json", "stream"] }
rodio = "0.14.0"
ulid = "0.4.1"
